Use --add-exports for compiler plugin instead of --add-opens