@@ -108,15 +108,16 @@
                     <source>21</source>
                     <target>21</target>
                     <compilerArgs>
-                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
                 <configuration>
                     <argLine>
                         --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
@@ -124,7 +125,6 @@
                         --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
-                <version>2.22.2</version>
             </plugin>
         </plugins>
     </build>
